# posmoc

./: .gitignore  README.md  main.py  pyproject.toml  run.py  script.py
posm/: __init__.py
posmoc/: __init__.py  ai.py  audio.py  listener.py  script.py  serial.py  speaker.py
